// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handler 1`] = `
{
  "installedPackages": [
    "@wdio/local-runner",
    "@wdio/mocha-framework",
    "@sveltejs/vite-plugin-svelte",
  ],
  "parsedAnswers": {
    "_async": "async ",
    "_await": "await ",
    "backend": "On my local machine",
    "baseUrl": "http://localhost",
    "destPageObjectRootPath": "",
    "destSerenityLibRootPath": "",
    "destSpecRootPath": "/foo/bar",
    "destStepRootPath": "/foo/bar",
    "esmSupport": true,
    "framework": "mocha",
    "generateTestFiles": false,
    "hasRootTSConfig": false,
    "installTestingLibrary": false,
    "isSync": false,
    "isUsingBabel": false,
    "isUsingCompiler": "TypeScript (https://www.typescriptlang.org/)",
    "isUsingTypeScript": true,
    "npmInstall": true,
    "packagesToInstall": [
      "@wdio/local-runner",
      "@wdio/mocha-framework",
      "@sveltejs/vite-plugin-svelte",
    ],
    "plugins": [],
    "preset": "svelte",
    "projectName": "my-module",
    "projectRootDir": "/foo/bar",
    "purpose": undefined,
    "rawAnswers": {
      "backend": "On my local machine",
      "baseUrl": "http://localhost",
      "framework": "@wdio/mocha-framework$--$mocha",
      "generateTestFiles": false,
      "isUsingCompiler": "TypeScript (https://www.typescriptlang.org/)",
      "npmInstall": true,
      "plugins": [],
      "preset": "@sveltejs/vite-plugin-svelte$--$svelte",
      "reporters": [],
      "runner": "@wdio/local-runner$--$local",
      "services": [],
    },
    "relativePath": "",
    "reporters": [],
    "runner": "local",
    "serenityAdapter": false,
    "services": [],
    "specs": undefined,
    "stepDefinitions": undefined,
    "tsConfigFilePath": "/foo/bar/tsconfig.json",
    "tsProject": "./tsconfig.json",
    "usePageObjects": false,
    "useSauceConnect": undefined,
    "wdioConfigPath": "/foo/bar/wdio.conf.ts",
  },
  "success": true,
}
`;

exports[`parseAnswers 1`] = `
{
  "_async": "async ",
  "_await": "await ",
  "backend": "On my local machine",
  "baseUrl": "http://localhost",
  "destPageObjectRootPath": "/tmp/foobar",
  "destSerenityLibRootPath": "",
  "destSpecRootPath": "/tmp/foobar",
  "destStepRootPath": "/foo/bar",
  "esmSupport": true,
  "framework": "mocha",
  "generateTestFiles": true,
  "hasRootTSConfig": false,
  "installTestingLibrary": false,
  "isSync": false,
  "isUsingBabel": false,
  "isUsingCompiler": "TypeScript (https://www.typescriptlang.org/)",
  "isUsingTypeScript": true,
  "npmInstall": true,
  "packagesToInstall": [
    "@wdio/local-runner",
    "@wdio/mocha-framework",
    "@sveltejs/vite-plugin-svelte",
    "@wdio/spec-reporter",
    "wdio-wait-for",
    "@wdio/sauce-service",
  ],
  "pages": "/tmp/foobar/pageobjects",
  "plugins": [
    "wait-for",
  ],
  "preset": "svelte",
  "projectName": "my-module",
  "projectRootDir": "/foo/bar",
  "purpose": undefined,
  "rawAnswers": {
    "backend": "On my local machine",
    "baseUrl": "http://localhost",
    "framework": "@wdio/mocha-framework$--$mocha",
    "generateTestFiles": true,
    "isUsingCompiler": "TypeScript (https://www.typescriptlang.org/)",
    "npmInstall": true,
    "pages": "/tmp/foobar/pageobjects",
    "plugins": [
      "wdio-wait-for$--$wait-for",
    ],
    "preset": "@sveltejs/vite-plugin-svelte$--$svelte",
    "reporters": [
      "@wdio/spec-reporter$--$spec",
    ],
    "runner": "@wdio/local-runner$--$local",
    "services": [
      "@wdio/sauce-service$--$sauce",
    ],
    "specs": "/tmp/foobar/specs",
    "usePageObjects": true,
  },
  "relativePath": "",
  "reporters": [
    "spec",
  ],
  "runner": "local",
  "serenityAdapter": false,
  "services": [
    "sauce",
  ],
  "specs": "./../../tmp/foobar/specs",
  "stepDefinitions": undefined,
  "tsConfigFilePath": "/foo/bar/tsconfig.json",
  "tsProject": "./tsconfig.json",
  "usePageObjects": true,
  "useSauceConnect": undefined,
  "wdioConfigPath": "/foo/bar/wdio.conf.ts",
}
`;

exports[`runConfigCommand 1`] = `
[
  [
    "
",
  ],
  [
    "
🤖 Successfully setup project at /foo/bar 🎉

Join our Discord Community Server and instantly find answers to your issues or queries. Or just join and say hi 👋!
  🔗 https://discord.webdriver.io

Visit the project on GitHub to report bugs 🐛 or raise feature requests 💡:
  🔗 https://github.com/webdriverio/webdriverio

To run your tests, execute:
$ cd /foo/bar
$ npm run wdio
",
  ],
]
`;
